# WERBle

./: .gitignore  README.md  cli.py  hyps.txt  pyproject.toml  refs.txt  werble_output.json
werble/: __init__.py  cli.py  scorer.py
