[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "werble"
version = "0.1.0"
description = "A lightweight tool for calculating Word Error Rate (WER) in ASR systems."
readme = "README.md"
authors = [
  { name = "Jennifer Laman", email = "your-email@example.com" }
]
license = { file = "LICENSE" }
dependencies = [
  "matplotlib>=3.0"
]
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
werble = "werble.cli:main"
